tests/errors/coherence-methode_non_existante.kawa
var point p;

class point {
  attribute int x;
  attribute int y;

  method void constructor (int x, int y) {
    this.x = x;
    this.y = y;
  }

}

main {
  p = new point(1, 2);
  p.meth(); // methode non existante
  return 0;
}
